--- a/package.json
+++ b/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack --config=webpack.prod.config",
-    "devLauncher": "node ./configs/generateDevLauncher.js",
-    "start": "npm run devLauncher&& webpack-dev-server --config=webpack.dev.config",
+    "build": "webpack --config=configs/webpack.prod.config&& node ./scripts/addScriptHeader.js",
+    "start": "node ./scripts/generateDevLauncher.js&& webpack-dev-server --config=configs/webpack.dev.config",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sergey Mankevich",
@@ -23,7 +22,6 @@
     "typescript": "3.0.1",
     "webpack": "4.17.0",
     "webpack-cli": "3.1.0",
-    "webpack-dev-server": "3.1.5",
-    "wrapper-webpack-plugin": "2.0.0"
+    "webpack-dev-server": "3.1.5"
   }
 }
