--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "1.0.0",
   "description": "",
   "scripts": {
-    "build": "webpack --config=configs/webpack.prod.config&& node ./scripts/addScriptHeader.js",
-    "start": "node ./scripts/generateDevLauncher.js&& webpack-dev-server --config=configs/webpack.dev.config",
+    "build": "webpack --config=./configs/webpack.prod.config&& node ./scripts/addScriptHeader.js",
+    "start": "node ./scripts/generateDevLauncher.js&& webpack-dev-server --config=./configs/webpack.dev.config",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Sergey Mankevich",
