--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "author": "Sergey Mankevich",
   "license": "ISC",
   "dependencies": {
-    "jquery": "3.3.1"
+    "jquery": "3.3.1",
+    "lz-string": "^1.4.4"
   },
   "devDependencies": {
     "@types/jquery": "3.3.6",
