--- a/package.json
+++ b/package.json
@@ -5,17 +5,23 @@
   "scripts": {
     "build": "webpack --config=./configs/webpack.prod.config&& node ./scripts/addScriptHeader.js",
     "start": "node ./scripts/generateDevLauncher.js&& webpack-dev-server --config=./configs/webpack.dev.config",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start --config=karma.conf.js"
   },
   "author": "Sergey Mankevich",
   "license": "ISC",
   "dependencies": {
     "jquery": "3.3.1",
-    "lz-string": "^1.4.4"
+    "lz-string": "1.4.4"
   },
   "devDependencies": {
+    "@types/jasmine": "2.8.8",
     "@types/jquery": "3.3.6",
     "css-loader": "1.0.0",
+    "jasmine-core": "3.2.1",
+    "karma": "3.0.0",
+    "karma-chrome-launcher": "2.2.0",
+    "karma-jasmine": "1.1.2",
+    "karma-typescript": "3.0.13",
     "style-loader": "0.22.1",
     "ts-loader": "4.5.0",
     "tslint": "5.11.0",
